<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Top block -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="240dp">

            <ImageView
                android:id="@+id/imgPlace"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/img_royal_palace" />

            <!-- App Bar -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="#60ffffff"
                android:paddingHorizontal="16dp">

                <ImageView
                    android:id="@+id/imgBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_back" />

                <ImageView
                    android:id="@+id/imgShare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_share" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:layout_toStartOf="@id/imgShare"
                    android:src="@drawable/ic_favorite" />

            </RelativeLayout>

        </RelativeLayout>

        <!-- Menu block -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:id="@+id/txtAbout"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:background="@drawable/bg_place_menu_active"
                android:gravity="center"
                android:paddingHorizontal="16dp"
                android:paddingVertical="4dp"
                android:text="@string/about"
                android:textColor="@color/green" />

            <TextView
                android:id="@+id/txtPhotos"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginHorizontal="8dp"
                android:background="@drawable/bg_place_menu_inactive"
                android:gravity="center"
                android:paddingHorizontal="16dp"
                android:paddingVertical="4dp"
                android:text="@string/photos"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/txtReviews"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:background="@drawable/bg_place_menu_inactive"
                android:gravity="center"
                android:paddingVertical="4dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/reviews"
                android:textColor="@color/white" />

        </LinearLayout>

        <!-- Horizontal line -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray" />

        <!-- Place Name -->
        <TextView
            android:id="@+id/txtPlaceName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:text="Royal Palace"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!-- Rates and reviews -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <RatingBar
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:rating="4.5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="7k reviews" />

        </LinearLayout>

        <!-- Place Info -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_info" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="The Royal Palace is a complex of building. The Royal Palace is a complex of building. The Royal Palace is a complex of building. The Royal Palace is a complex of building. The Royal Palace is a complex of building. The Royal Palace is a complex of building. " />

        </LinearLayout>

        <!-- Location -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_location" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="(~ 2.5km) Sothearos between street 240 &amp; 184, Phnom Penh" />

        </LinearLayout>

        <!-- Related Places title -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/related_places"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!-- Related Places -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- First place -->
            <LinearLayout
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_margin="6dp"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="8dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/img_national_museum" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:text="National Museum" />

            </LinearLayout>

            <!-- Second place -->
            <LinearLayout
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_margin="6dp"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="8dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/img_independence_monument" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:text="Independence Monument" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>